classDiagram
    direction LR

    class User {
        +int id
        +string name
        +string email
        +string password
        +string role
        +datetime email_verified_at
        +string two_factor_secret
        +datetime deleted_at
        +initials() string
        +isAdmin() bool
        +isDoctor() bool
        +isPatient() bool
    }

    class Patient {
        +int id
        +int user_id
        +string first_name
        +string last_name
        +date date_of_birth
        +string gender
        +string address
        +string city
        +string postal_code
        +string phone
        +string emergency_contact_name
        +string emergency_contact_phone
        +string blood_type
        +string allergies
        +string medical_notes
        +datetime deleted_at
        +fullName() string
    }

    class PatientSocioeconomic {
        +int id
        +int patient_id
        +string marital_status
        +int number_of_dependents
        +string living_arrangement
        +string employment_status
        +string occupation
        +string income_level
        +bool has_health_insurance
        +string education_level
        +string smoking_status
        +string alcohol_consumption
        +string physical_activity_level
        +bool has_family_support
        +bool has_caregiver
        +string transportation_access
        +string food_security_status
        +string dietary_restrictions_cultural
        +string additional_notes
    }

    class Visit {
        +int id
        +int patient_id
        +int doctor_id
        +date date
        +string notes
    }

    User "1" --> "0..1" Patient : has
    Patient "1" --> "0..1" PatientSocioeconomic : has
    Patient "1" --> "0..*" Visit : has many
    User "1" --> "0..*" Visit : conducts as doctor
